# master-research

./: .gitignore
bench/: bench.sh  pred.py
bench/config/: model2maxlen.json  model2path.json
bench/pred/meta-llama-3-8b-instruct/: 2wikimqa.jsonl
bench/pred/meta-llama-3.1-8b-instruct/: 2wikimqa.jsonl  result.json
draw/: print_diff.py  print_qkv.py
example/: hack_kvcache.py  helper.sh  tunecache_pred.py  utils.py
example/config/: dataset2maxlen.json  dataset2prompt.json  model2maxlen.json
example/pred/meta-llama-3-8b-instruct/: 2wikimqa.jsonl
example/pred/meta-llama-3.1-8b-instruct/: 2wikimqa.jsonl
example/pred/qwen2.5-7b-instruct/: lcc.jsonl
example/pred/toolace-2-llama-3.1-8b/: result.json
longbench_data/: longbench_data.py
lora/: merge.py  quick_start.py  qwen_finetune.py
lskp/: pyproject.toml
lskp/integration/vllm/: factory.py  lskp_connector.py  patch.sh
lskp/lskp/: config.py  gpu_connector.py  lskp_engine.py  utils.py
lskp/requirements/: common.txt
test/: eval.py  hack_kvcache.py  helper.sh  pred.py
test/config/: dataset2prompt.json  model2path.json
test/pred/evolcodellama-3.1-8b-instruct/: evol-instruct-python-1k.jsonl  lcc.jsonl  result.json
test/pred/meta-llama-3-8b-instruct/: result.json
test/pred/meta-llama-3.1-8b-instruct/: 2wikimqa.jsonl  evol-instruct-python-1k.jsonl  lcc.jsonl  result.json
test/pred/qwen2.5-7b-instruct/: evol-instruct-python-1k.jsonl  result.json
test/pred/toolace-2-llama-3.1-8b/: lcc.jsonl
transformers/src/transformers/models/llama/: modeling_llama.py
(+1 files in other folders)
